--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,12 +51,12 @@ netlink-packet-core = "0.8.1"
 netlink-sys = "0.8.7"
 nftables = "0.6.3"
 fs2 = "0.4.3"
-tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "signal", "fs"] }
+tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "signal", "fs", "time"] }
 tokio-stream = { version = "0.1.17", features = ["net"] }
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
 prost = "0.14.1"
-mozim = "0.2.7"
+mozim = "0.3.0"
 futures-channel = "0.3.31"
 futures-core = "0.3.31"
 futures-util = "0.3.31"
